--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,22 +6,20 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><a>Jobkonnect</a></li>
-                    <li><a>Home</a></li>
-                    <li><a>About Us</a></li>
-                    <li><a>Contact Us</a></li>
-                    <li>Find A Job</li>
-                    <li>Post A Job</li>
-                </ul>
+                <a>Jobkonnect</a>
+                <a>Home</a>
+                <a>About Us</a>
+                <a>Contact Us</a>
+                <a>Find A Job</a>
+                <a>Post A Job</a>
             </nav>
         </header>
+        {% block body %}
+        {% endblock %}
         <footer>
-            <ul>
-                <li><a>Home</a></li>
-                <li><a>About Us</a></li>
-                <li><a>Contact Us</a></li>
-            </ul>
+            <a>Home</a>
+            <a>About Us</a>
+            <a>Contact Us</a>
         </footer>
     </body>
 </html>
