--- a/JOBKONNECT/templates/layout.html
+++ b/JOBKONNECT/templates/layout.html
@@ -6,24 +6,20 @@
     <body>
         <header>
             <nav>
-                <ul>
-                   <a>Jobkonnect</a>
-                   <a>Home</a>
-                   <a>About Us</a>
-                   <a>Contact Us</a>
-                   Find A Job
-                   Post A Job
-                </ul>
+                <a>Jobkonnect</a>
+                <a>Home</a>
+                <a>About Us</a>
+                <a>Contact Us</a>
+                <a>Find A Job</a>
+                <a>Post A Job</a>
             </nav>
         </header>
         {% block body %}
-        {% %}
+        {% endblock %}
         <footer>
-            <ul>
-                <a>Home</a>
-               <a>About Us</a>
-               <a>Contact Us</a>
-            </ul>
+            <a>Home</a>
+            <a>About Us</a>
+            <a>Contact Us</a>
         </footer>
     </body>
 </html>
