--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -6,8 +6,12 @@
   <body>
     <h1>Signup Page</h1>
     <form action="" method="post">
+      <label for="firstname">Firstname:</label>
+      <input type="text" id="firstname" name="firstname"><br><br>
+      <label for="lastname">Lastname:</label>
+      <input type="text" id="lastname" name="lastname"><br><br>
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username"><br><br>
+      <input type="text" id="username" name="username" placeholder="Enter your username"><br><br>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email"><br><br>
       <label for="password">Password:</label>
