--- a/templates/account/employee.html
+++ b/templates/account/employee.html
@@ -1,9 +1,27 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <form method="post">
+    {% comment %} <form method="post">
         {%csrf_token%}
         {{ form.as_p }}
         <button type="submit">Submit</button>
-    </form>
+    </form> {% endcomment %}
+    <H1> Create an Acoount </H1>
+  <div class="container">
+    <div class="signup-column">
+      <h2>Employee</h2>
+      <form action="employee" method="post">
+        {%csrf_token%}
+        <input type="text" name="firstname" placeholder="First Name" required> <br>
+        <input type="text" name="lastname" placeholder="Last Name" required><br>
+        <input type="text" name="email" placeholder="Email" required><br>
+        <input type="text" name="profession" placeholder="Profession" required><br>
+        <input type="phonenumber" name="phonenumber" placeholder="Phone" required><br>
+        <input type="location" name="location" placeholder="Location" required><br>
+        <input type="password" name="password" placeholder="Password" required><br>
+        <input type="password" name="password" placeholder="Confirm Password" required><br>
+        <button type="submit">Sign Up</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
