--- a/templates/account/employer.html
+++ b/templates/account/employer.html
@@ -21,6 +21,11 @@
       flex: 1;
       padding: 20px;
     }
+
+    h1 {
+      text-align: center;
+      font-color: red;
+    }
     
     h2 {
       text-align: center;
