--- a/templates/account/employer.html
+++ b/templates/account/employer.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -53,31 +54,45 @@
       background-color: #f2f2f2;
     }
   </style>
+  <script>
+    window.onload = function() {
+      var passwordInput = document.getElementById("password");
+      var confirmPasswordInput = document.getElementById("confirm_password");
+      var submitButton = document.querySelector("button[type='submit']");
+
+      submitButton.addEventListener("click", function(event) {
+        if (passwordInput.value !== confirmPasswordInput.value) {
+          event.preventDefault();
+          alert("Password and Confirm Password do not match.");
+        }
+
+        var passwordPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$/;
+        if (!passwordPattern.test(passwordInput.value)) {
+          event.preventDefault();
+          alert("Password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number, and one special character.");
+        }
+      });
+    };
+  </script>
 </head>
 <body>
-<H1> Create an Acoount </H1>
+  <h1>Create an Account</h1>
   <div class="container">
     <div class="signup-column">
       <h2>Employer</h2>
       <form action="employer" method="post">
-        {%csrf_token%}
+        {% csrf_token %}
         <input type="text" name="firstname" placeholder="First Name" required><br>
         <input type="text" name="lastname" placeholder="Last Name" required><br>
         <input type="text" name="email" placeholder="Email" required><br>
         <input type="text" name="location" placeholder="Location" required><br>
         <input type="phonenumber" name="phonenumber" placeholder="Phone" required><br>
-        <input type="password" name="password" placeholder="Password" required><br>
-        <input type="password" name="confirm_password" placeholder="Confirm Password" required><br>
+        <input type="password" id="password" name="password" placeholder="Password" required><br>
+        <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required><br>
         <button type="submit">Sign Up</button>
       </form>
     </div>
   </div>
 </body>
 </html>
-    {% comment %} <form method="post">
-        {%csrf_token%}
-        {{ form.as_p }}
-
-        <button type="submit">Submit</button>
-    </form> {% endcomment %}
 {% endblock %}
