--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,10 +31,10 @@
 
     <h3>You can also find us on</h3>
     <ul class="social-buttons">
-      <li><a href="https://facebook.com/jobkonnect" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a></li>
-      <li><a href="https://twitter.com/jobkonnect" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a></li>
-      <li><a href="https://linkedin.com/company/jobkonnect" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a></li>
-      <li><a href="https://instagram.com/jobkonnect" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a></li>
+      <li><a href="https://facebook.com/jobkonnectke" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a></li>
+      <li><a href="https://twitter.com/jobkonnectke" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a></li>
+      <li><a href="https://linkedin.com/company/jobkonnectke" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a></li>
+      <li><a href="https://instagram.com/jobkonnectke" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a></li>
     </ul>
   </section>
 
