Just A Few Changes to templates and static

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,15 +1,15 @@
 {% load static%}
 <link rel="stylesheet" href="{% static '/css/public/output.css' %}">
 {% block body %}
-<div class="p-5  absolute bottom-0 bg-green pt-20 b-40 sticky">
-    <nav class=" md:flex md:items-center md:justify-between">
-        <div>
-            <ul class="md:flex md:items-center">
+<div class=" bottom-0 insert-x-0 relative left-10 bg-green-600 ">
+    <nav class=" md:flex md:justify-between">
+        <div class="absolute bottom-0">
+            <ul class="md:flex md:items-center bottom-0">
                 <li class="mx-4">
-                    <a href="" class=" text-xl text-white hover:text-white  hover:bg-black">HOME</a>
+                    <a href="." class=" text-xl text-white hover:text-white  hover:bg-black">HOME</a>
                 </li>
                 <li class="mx-4">
-                    <a href="" class=" text-xl text-white hover:text-white hover:bg-black">POST JOB</a>
+                    <a href="post.html" class=" text-xl text-white hover:text-white hover:bg-black">POST JOB</a>
                 </li>
                 <li class="mx-4">
                     <a href="" class=" text-xl text-white hover:text-white hover:bg-black">FIND JOB</a>
@@ -18,7 +18,7 @@
                     <a href="" class=" text-xl text-white hover:text-white hover:bg-black">ABOUT US</a>
                 </li>
                 <li class="mx-4">
-                    <a href="" class=" text-xl text-white hover:text-white hover:bg-black">CONTACT US</a>
+                    <a href="contact.html" class=" text-xl text-white hover:text-white hover:bg-black">CONTACT US</a>
                 </li>
             </ul>
         </div>
