--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,16 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="{% static '/css/public/output.css' %}">
+      <link rel="stylesheet" href="{% static '/css/style.css'%}">
       <title>Jobkonnect</title>
 </head>
 <body class="bg-zinc-900">
       {% include 'navbar.html'%}
       {% block body %}
       {% endblock %}
+      <div class="footer
       {% include 'footer.html'%}
+      </div>
 </body>
 </html>
 
