--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static%}
 <link rel="stylesheet" href="{% static '/css/public/output.css' %}">
 {% block body %}
-<div  class="text-white p-5 border-b-">
+<div  class="text-white p-5 ">
     <nav class=" md:flex md:items-center md:justify-between">
         <div>
             <span class="text-2xl font-[poppers] cursor-pointer ">JOBKONNECT</span>
