Working On authenticate.html

--- a/templates/account/authenticate.html
+++ b/templates/account/authenticate.html
@@ -1,1 +1,14 @@
 {% extends 'base.html' %}
+{% load static%}
+{% block body %}
+<link rel="stylesheet" href="{% static 'css/authenticate.css'%}">
+<div class="container-1">
+    <div class="container-2">
+        <a href="" class="box-1">Sign Up as an Employer</a></h6>
+        <a href="" class="box-2">Sign Up as an Employee</a>
+        <br>   
+    <div class="container-3">
+        <a href="" class="box-3">Login</a>
+    </div>
+</div>
+{% endblock %}
