--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
       {% include 'navbar.html'%}
       {% block body %}
       {% endblock %}
-      <div class="footer
-      {% include 'footer.html'%}
+      <div class="footer">
+      <!-- {% include 'footer.html'%} -->
       </div>
 </body>
 </html>
