--- a/templates/apply.html
+++ b/templates/apply.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Job Application - JobKonnect</title>
+  <link rel="stylesheet" type="text/css" href="apply.css">
 </head>
 <body>
   <header>
