Working on authenticate .html

--- a/templates/account/authenticate.html
+++ b/templates/account/authenticate.html
@@ -4,11 +4,11 @@
 <link rel="stylesheet" href="{% static 'css/authenticate.css'%}">
 <div class="container-1">
     <div class="container-2">
-        <a href="" class="box-1">Sign Up as an Employer</a></h6>
-        <a href="" class="box-2">Sign Up as an Employee</a>
+        <a href="" class="box-1">SIGN UP AS AN EMPLOYER</a>
+        <a href="" class="box-2">SIGN UP AS AN EMPLOYEE</a>
         <br>   
     <div class="container-3">
-        <a href="" class="box-3">Login</a>
+       <a href="" class="box-3">LOGIN</a>
     </div>
 </div>
 {% endblock %}
