--- a/static/css/authenticate.css
+++ b/static/css/authenticate.css
@@ -1,37 +1,54 @@
 .container-1 {
     display: flex; 
     max-width: 40%;
-    background-color:#f4f4f4;
+    /* background-color: #f4f; */
     justify-content:center;
     align-items: center;
     height: 100vh;
-    body: 100%;
     margin-left: 30%;
 }
 .container-2{
-
+    display: inline-block;
 }
-.box-1 .box-2{
+.box-1{
     width: 50%; 
     justify-content: space-between;
-    padding: 20px;
-}  
-.box-1 {
-    background-color: aqua;
+    padding: 26px;
+    font-family: serif;
+    font-size: large;
+    background-color: gray;
     max-width: auto;
     align-items: flex-end;
-}
+    border-radius: 20px;
+}  
 .box-2 {
-    background-color: blue;
+    background-color: rgb(20, 116, 57);
     max-width: auto;
     justify-content: flex-end;
     align-items: flex-end;
+    background-image: ;
+    padding: 26px;
+    border-radius: 20px;
+    font-size: large;
 }
 .container-3{
-
+    display: flex;
+    margin-top: 30px;
 }
 .box-3 {
     background-color: coral;
     max-width: auto;
     justify-content: center;
+    align-items: center;
+    padding-left: 26px;
+    padding-right: 26px;
+    padding: 26px;
+    width: 100%;
+    text-align: center;
+    text-decoration: underline;
+    text-underline-offset: 2px;
+    border-radius: 20px;
+}
+.box-1:hover{
+    background-color: lightgrey;
 }
