Linked Some Pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,13 @@
 {% block body %}
 <div class="mt-26 mb-11 w-11/12 h-screen relative left-10 text-white">
     <div class="class=" relative mr-16 mx-px-8 flex h-screen ">
-            <h1 class="float-left font-serif text-6xl my-8 bg-red-400">
+            <h1 class="float-left font-serif text-6xl my-8 ">
                 WE KONNECT<br>YOU TO<br>YOUR NEXT JOB
             </h1>
                 <!-- <h6>Landing your Next Job is A Registration Away</h6> -->
-            <img class="float-right my-8" src="https://images.pexels.com/photos/1367269/pexels-photo-1367269.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Man and Woman Facing You" width="600" height="600">
-    </div>
+            <!-- <img class="float-right my-8" src="https://images.pexels.com/photos/1367269/pexels-photo-1367269.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Man and Woman Facing You" width="600" height="600"> -->
+            <img class="float-right my-8" src="static/images/We_Konnect.webp" alt="Man and Woman Facing You" width="600" height="600">
+       </div>
 <div class="inline-block my-64">
     <br>
         <div class="absoute right-0 float-right mb-56">
@@ -17,12 +18,14 @@
                 <a>Post A Job</a>
             </h1>
             <h6 class="font-serif text-2xl my-2">Want A Skilled Personnel, <a href="" class="hover:text-white hover:bg-blue-400 underline underline-offset-8 hover:rounded-s">Post A Job</a> and Get the Best</h6>
-            <img class="mb-56"src="https://media.istockphoto.com/id/1365436662/photo/successful-partnership.jpg?b=1&s=170667a&w=0&k=20&c=u9NYd0qY266RW0x1nB5ng8scAJZ5LoftacwhtqD-v58=" width="600" height="600" alt="Announcement Megaphone">
+            <!-- <img class="mb-56"src="https://media.istockphoto.com/id/1365436662/photo/successful-partnership.jpg?b=1&s=170667a&w=0&k=20&c=u9NYd0qY266RW0x1nB5ng8scAJZ5LoftacwhtqD-v58=" width="600" height="600" alt="Announcement Megaphone"> -->
+            <img class="mb-56"src="/static/images/Post A Job.jpg" width="600" height="600" alt="Announcement Megaphone">
         </div>
         <div class="absolute right-0 float-right">
             <h1 class=" font-serif text-6xl">Register Your Expertise</h1>
             <h6 class="font-serif text-2xl my-2">You are <a href="" class="hover:bg-blue-400">a Click Away </a> from your Next Job</h6>
-            <img src="https://images.unsplash.com/photo-1564182842519-8a3b2af3e228?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=465&q=80"  height="300" width="600" height="300">
+            <!-- <img src="https://images.unsplash.com/photo-1564182842519-8a3b2af3e228?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=465&q=80"  height="300" width="600" height="300"> -->
+            <img src="/static/images/register.jpg"  height="300" width="600" height="300">
         </div>
 </div>
 </div>
