--- a/static/css/authenticate.css
+++ b/static/css/authenticate.css
@@ -1,8 +1,8 @@
 .container-1 {
     display: flex; 
     max-width: 40%;
-    /* background-color: #f4f; */
     justify-content:center;
+    background-image: url('/static/images/spencer-davis-SVfXlChg9HI-unsplash.jpg');
     align-items: center;
     height: 100vh;
     margin-left: 30%;
@@ -16,13 +16,15 @@
     padding: 26px;
     font-family: serif;
     font-size: large;
-    background-color: gray;
+    /* background-color:skyblue; */
     max-width: auto;
     align-items: flex-end;
     border-radius: 20px;
+    color: white;
+    border: 1px solid white;
 }  
 .box-2 {
-    background-color: rgb(20, 116, 57);
+    /* background-color: rgb(20, 116, 57); */
     max-width: auto;
     justify-content: flex-end;
     align-items: flex-end;
@@ -30,13 +32,15 @@
     padding: 26px;
     border-radius: 20px;
     font-size: large;
+    color: white;
+    border: 1px solid white;
 }
 .container-3{
     display: flex;
     margin-top: 30px;
 }
 .box-3 {
-    background-color: coral;
+    /* background-color: coral; */
     max-width: auto;
     justify-content: center;
     align-items: center;
@@ -48,7 +52,18 @@
     text-decoration: underline;
     text-underline-offset: 2px;
     border-radius: 20px;
+    color: white;
+    border: 1px solid white;
 }
 .box-1:hover{
-    background-color: lightgrey;
+    background-color: white;
+    color: black;
+}
+.box-2:hover{
+    background-color: white;
+    color: black;
+}
+.box-3:hover{
+    background-color: white;
+    color: black;
 }
