--- a/templates/account/authenticate.html
+++ b/templates/account/authenticate.html
@@ -4,11 +4,11 @@
 <link rel="stylesheet" href="{% static 'css/authenticate.css'%}">
 <div class="container-1">
     <div class="container-2">
-        <a href="" class="box-1">SIGN UP AS AN EMPLOYER</a>
-        <a href="" class="box-2">SIGN UP AS AN EMPLOYEE</a>
+        <a href="signup/employer" class="box-1">SIGN UP AS AN EMPLOYER</a>
+        <a href="signup/employee" class="box-2">SIGN UP AS AN EMPLOYEE</a>
         <br>   
     <div class="container-3">
-       <a href="" class="box-3">LOGIN</a>
+       <a href="login" class="box-3">LOGIN</a>
     </div>
 </div>
 {% endblock %}
