--- a/templates/account/employer.html
+++ b/templates/account/employer.html
@@ -9,6 +9,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #ffffff
     }
     
     .container {
@@ -26,6 +27,7 @@
     h1 {
       text-align: center;
       font-color: red;
+      font-weight: bold;
     }
     
     h2 {
@@ -41,18 +43,16 @@
     }
     
     button[type="submit"] {
-      width: 100%;
+      width: 75%;
       padding: 10px;
       background-color: #4CAF50;
       color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
+     
     }
     
-    .signup-column:nth-child(odd) {
-      background-color: #f2f2f2;
-    }
   </style>
   <script>
     window.onload = function() {
