--- a/templates/Job Posting - JobKonnect_files/style.css
+++ b/templates/Job Posting - JobKonnect_files/style.css
@@ -154,56 +154,11 @@ body {
 }
 
 /** post job css **/
-.postjob {
-  width: 50%;
+.post-job {
+  width: 100%;
   height: auto;
   justify-content: center;
   margin-left: 20%;
   flex-direction: column;
   border:2px solid #ccc;
-}
-
-.postjob h2{
-  border: 2px solid #ccc;
-  background-color: #ccc;
-  width: 40%;
-  margin-left: 30%;
-}
-
-.postjob label, option {
-  border: 2px solid #ccc;
-  background-color: #ccc;
-  width: 40%;
-  font-size: larger;
-  margin-left: 5%;
-  font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, "Liberation Sans", Roboto, Noto, sans-serif;
-}
-
-.postjob select, input[type=text] {
-  border: 2px solid #ccc;
-  background-color: #ccc;
-  width: 50%;
-  height: 40px;
-  margin-left: 5%;
-  font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, "Liberation Sans", Roboto, Noto, sans-serif;
-}
-
-.postjob textarea {
-  border: 2px solid #ccc;
-  background-color: #ccc;
-  width: 50%;
-  height: 140px;
-  margin-left: 5%;
-  font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, "Liberation Sans", Roboto, Noto, sans-serif;
-}
-
-.postjob button {
-  background-color: #1ec3e8;
-  color: white;
-  border: none;
-  border-radius: 22px;
-  height: 40px;
-  width: 200px;
-  cursor: pointer;
-  margin-left: 5%;
 }
