--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static '/css/public/output.css' %}">
 {% block body %}
 <div  class="text-white p-5 ">
-    <nav class=" md:flex md:items-center md:justify-between">
+    <nav class=" md:flex md:items-center md:justify-between bg-blue-400">
         <div>
             <span class="text-2xl font-[poppers] cursor-pointer ">JOBKONNECT</span>
         </div>
@@ -12,7 +12,7 @@
                     <a href="." class=" text-xl hover:text-white hover:bg-blue-400">HOME</a>
                 </li>
                 <li class="mx-4">
-                    <a href="" class=" text-xl hover:text-white hover:bg-blue-400">POST JOB</a>
+                    <a href="employer/post_job" class=" text-xl hover:text-white hover:bg-blue-400">POST JOB</a>
                 </li>
                 <li class="mx-4">
                     <a href="" class=" text-xl hover:text-white hover:bg-blue-400">FIND JOB</a>
