--- a/static/styles.css
+++ b/static/styles.css
@@ -54,17 +54,36 @@ html, body, h1, h2, p, input, textarea, button {
     cursor: pointer;
   }
   
-  footer {
+  .footer {
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
+    margin-bottom: 0px;
+    margin-top: 100%;
   }
   
-  footer a {
+  .footer a {
     color: #fff;
     text-decoration: none;
     margin-right: 10px;
   }
-  
-  
+  /** post css **/
+  header {
+      background-color: #00bdfe;
+      color: #fff;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin-right: 10px;
+      font-weight: bold;
+    }
+ 
