--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Login Page</h1>
     <form action="" method="post">
+      {% csrf_token %}
       <label for="username">Username:</label>
       <input type="text" id="username" name="username"><br><br>
       <label for="password">Password:</label>
