--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,28 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="{% static '/css/public/output.css' %}">
       <link rel="stylesheet" href="{% static '/css/style.css'%}">
+      <style>
+      footer {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+      margin-bottom: 0px;
+      margin-top: 100%;
+      }
+
+    footer a {
+      color: #fff;
+      text-decoration: none;
+      margin-right: 10px;
+    }
+
+    body {
+      height: auto;
+      min-height: 100%;
+
+    }
+      </style>
       <title>Jobkonnect</title>
 </head>
 <body class="bg-zinc-900">
@@ -14,6 +36,9 @@
       {% block body %}
       {% endblock %}
       <div class="footer">
+             <footer>
+    <p>&copy; 2023 JobKonnect. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
+  </footer>
       <!-- {% include 'footer.html'%} -->
       </div>
 </body>
