--- a/templates/jobs/post.html
+++ b/templates/jobs/post.html
@@ -1,10 +1,21 @@
-{% extends 'jobs/job_base.html' %}
 {% load static %}
-{% block title %}JOB POST{% endblock title %}
-
-
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Job Posting - JobKonnect</title>
+</head>
+  <body>
+    <header>
+      <h1>JobKonnect</h1>
+      <nav>
+        <a href="base.html">Home</a>
+        <a href="jobs.html" target="_blank">Find Job</a>
+        <a href="post.html" target="_blank">Post Job</a>
+        <a href="contact.html" target="_blank">Contact Us</a>
+      </nav>
+    </header>
 <div class="post_job">
-  {% block content %}
   <section class="postjob">
     <h2>Post a Job</h2>
 
@@ -48,6 +59,6 @@
   <footer>
     <p>&copy; 2023 JobKonnect. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
   </footer>
-  {% endblock content %}
-
 </div>
+</body>
+</html>
