--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="{% static '/css/public/output.css' %}">
       <link rel="stylesheet" href="{% static '/css/style.css'%}">
+      <link rel="stylesheet" href="{static 'login.css'}">
       <title>Jobkonnect</title>
 </head>
 <body class="bg-zinc-900">
