--- a/static/css/style.css
+++ b/static/css/style.css
@@ -210,3 +210,41 @@ body {
   cursor: pointer;
   margin-left: 5%;
 }
+
+/** login css **/
+main {
+  width: 30%;
+  height: 60%;
+  justify-content: center;
+  margin-left: 20%;
+  margin-top: 5%;
+  border:2px solid rgb(204, 204, 204);
+}
+
+main .field input {
+  width: 80%;
+  height: 40px;
+  margin-left: 10%;
+  margin-top: 5%;
+  border:2px solid rgb(204, 204, 204);
+}
+
+main .field label {
+  width: 80%;
+  height: 40px;
+  margin-left: 20%;
+  margin-top: 5%;
+}
+
+main h2 {
+  text-align: center;
+  justify-content: center;
+  margin-left: 10%;
+  margin-top: 5%;
+}
+
+main .actions {
+
+  margin-left: 10%;
+  margin-top: 5%;
+}
