worked on the login

--- a/templates/jobs/employee_landing.html
+++ b/templates/jobs/employee_landing.html
@@ -14,7 +14,7 @@
                 </div> -->
                 <div class ="items">
                     
-            <b><a href="/employee">Home</a>
+            <b><a href="/">Home</a>
                 <span>&nbsp;</span>
             </div><div class="items">
                 <a href="/employee">Jobs</a>
@@ -26,7 +26,7 @@
                 <a href="/employee">Profile</a>
                 <span>&nbsp;</span>
                 </div><div class="items">
-                <a href="/employee">Logout</a>
+                <a href="/account/logout">Logout</a>
                 <span>&nbsp;</span>
                 </div><div class="right-items">
                <div class="profile-pic"><a href="" ></a></div>
