--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,19 +9,26 @@
         <div>
             <ul class="md:flex md:items-center font-serif">
                 <li class="mx-4">
-                    <a href="." class=" text-xl hover:text-white hover:bg-blue-400">HOME</a>
+                    <a href="/" class=" text-xl hover:text-white hover:bg-blue-400">HOME</a>
                 </li>
                 <li class="mx-4">
                     <a href="employer/post_job" class=" text-xl hover:text-white hover:bg-blue-400">POST JOB</a>
                 </li>
                 <li class="mx-4">
-                    <a href="" class=" text-xl hover:text-white hover:bg-blue-400">FIND JOB</a>
+                    <a href="employee/" class=" text-xl hover:text-white hover:bg-blue-400">FIND JOB</a>
                 </li>
                 <li class="mx-4">
                     <a href="" class=" text-xl hover:text-white hover:bg-blue-400">ABOUT US</a>
                 </li>
                 <li class="mx-4">
                     <a href="" class=" text-xl hover:text-white hover:bg-blue-400">CONTACT US</a>
+                </li>
+                <li class="mx-4">
+                    <a href="account/login" class=" text-xl hover:text-white hover:bg-blue-400">LOGIN</a>
+                </li>
+                
+                <li class="mx-4">
+                    <a href="account/" class=" text-xl hover:text-white hover:bg-blue-400">Signup</a>
                 </li>
             </ul>
         </div>
