--- a/templates/post.html
+++ b/templates/post.html
@@ -77,8 +77,8 @@
     <header>
       <h1>JobKonnect</h1>
       <nav>
-        <a href="base.html">Home</a>
-        <a href="jobs.html" target="_blank">Find Job</a>
+        <a href="/">Home</a>
+        <a href="/employee/" target="_blank">Find Job</a>
         <a href="post.html" target="_blank">Post Job</a>
         <a href="contact.html" target="_blank">Contact Us</a>
       </nav>
