--- a/templates/jobs/employer_landing.html
+++ b/templates/jobs/employer_landing.html
@@ -1,5 +1,5 @@
-
-<!-- <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,19 +14,22 @@
                 </div>
                 <div class ="items">
                     
-            <b><a href="/employee">Home</a>
+            <b><a href="/">Home</a>
                 <span>&nbsp;</span>
             </div><div class="items">
                 <a href="/employee">Aplications</a>
                 <span>&nbsp;</span>
                 </div><div class="items">
-                <a href="employee/<employee_name/aplications">jobs history</a>
+                <!-- <a href="employee/<employee_name/aplications">jobs history</a>
                 <span>&nbsp;</span>
-                </div><div class="items">
+                </div><div class="items"> -->
                 <a href="/employee">Profile</a>
                 <span>&nbsp;</span>
                 </div><div class="items">
                 <a href="/employee">Logout</a>
+                <span>&nbsp;</span>
+                </div><div class="right-items">
+                <a href="/employer/post_job">Post Job</a>
                 <span>&nbsp;</span>
                 </div><div class="right-items">
                <div class="profile-pic"><a href="" ></a></div>
@@ -39,21 +42,17 @@
             </div>
             </div>
         </navbar>
-    </header> -->
-{% extends 'jobs/job_base.html' %}
-{% load static %}
-{% block title %}{% endblock %}
-{% block css %}
-{% endblock %}
-{% block body %}
+    </header>
 <div class="heading"><b> List of Your recent posted jobs </b></div>
+    {% if jobs %}
 <div class="job-container">
-    
+    {% for job in jobs %}
+
     <br>
     <div class="job">
         
         <div class="job-title">
-            <h3></h3>
+            <h3> {{job.job_title}}</h3>
             <div class="job-headings">
                 <span id="job-type">Job Type:{{job.job_type}}</span> &nbsp; &nbsp;
                 <span id="job-location">Job Location: {{job.job_location}}</span>
@@ -67,10 +66,10 @@
             </div>
         </div>
         <div class="job-description">
-            <p></p>
+            <p> {{job.description}}</p>
         </div>
         <div class="job-requirements">
-            <p></p>
+            <p>{{job.requiments}}</p>
         </div>
         <div class="job-apply">
             <button class="applybtn">View Aplications</button><br>
@@ -79,8 +78,15 @@
         
     </div>
 
+{% endfor %}
+
+    {% else %}
+    <div class="job">
+        <h3> No jobs posted yet <a href="/employer/post_job">Post Job</a></h3>
+    </div>
+    {% endif %}
+
 </div>
 <br>
 <div class="left">Employees near you</div>
 <div class="right">Jobs near you</div>
-{% endblock %}
